--- a/src/pages/edit-profile/edit-basic-profile/edit-step3/edit-step3.html
+++ b/src/pages/edit-profile/edit-basic-profile/edit-step3/edit-step3.html
@@ -43,54 +43,81 @@
               <div *ngIf="invalidAgeMsg != 'undefined'" >
                 <div class="error-message">{{invalidAgeMsg}}</div>
               </div>
+              <ion-item>
+                <ion-label>
+                    <ion-icon item-left ios="ios-transgender" md="md-transgender"></ion-icon>
+                </ion-label>
+                <ion-select [(ngModel)]="selecteLang" formControlName="langKnown" placeholder="Select Language"  multiple="true">
+                  <span *ngIf='languages'>
+                    <ion-option *ngFor="let lang of languages" [value]="lang.id">{{lang.lang_name}}</ion-option>
+                  </span>
+                </ion-select>
+                  <!-- <button item-end ion-button clear (click)="addLanguage()"><ion-icon name="add"></ion-icon></button>  -->
+              </ion-item>
+              <div *ngFor="let validation of validation_messages.langKnown" >
+                <div *ngIf="signUpForm.get('langKnown').hasError(validation.type) && signUpForm.get('langKnown').touched">
+                  <div class="error-message">{{validation.message}}</div>
+                </div>
+              </div>
 
               <ion-item>
-                  <ion-label>
-                      <ion-icon item-left ios="ios-transgender" md="md-transgender"></ion-icon>
-                  </ion-label>
-                  <ion-select interface="popover" placeholder="Gender" ([ngModel])="gender" formControlName="gender">
-                      <ion-option value="male">Male</ion-option>
-                      <ion-option value="female">Female</ion-option>
-
-                  </ion-select>
+                <ion-label>
+                    <ion-icon item-left ios="ios-transgender" md="md-transgender"></ion-icon>
+                </ion-label>
+                <ion-select interface="popover" placeholder="education" ([ngModel])="education" formControlName="education">
+                    <ion-option value="Masters of Arts">M.A</ion-option>
+                    <ion-option value="Masters of Science">M.Sc</ion-option>
+                    <ion-option value="Masters of Commerce">M.Com</ion-option>
+                    <ion-option value="Bachelor of Arts">B.A</ion-option>
+                    <ion-option value="Bachelor of Science">B.Sc</ion-option>
+                    <ion-option value="Bachelor of Commerce">B.Com</ion-option>
+                    <ion-option value="B.Sc Agri">B.Sc Agri</ion-option>
+                    <ion-option value="B.Tech">B.Tech</ion-option>
+                    <ion-option value="M.Tech">M.Tech</ion-option>
+                    <ion-option value="B.Engg">B.E</ion-option>
+                    <ion-option value="I.T.I">I.T.I</ion-option>
+                    <ion-option value="M.Engg">M.E</ion-option>
+                </ion-select>
               </ion-item>
-              <div *ngFor="let validation of validation_messages.gender" >
-                <div *ngIf="signUpForm.get('gender').hasError(validation.type) && signUpForm.get('gender').touched">
+              <div *ngFor="let validation of validation_messages.education" >
+                <div *ngIf="signUpForm.get('education').hasError(validation.type) && signUpForm.get('education').touched">
                   <div class="error-message">{{validation.message}}</div>
                 </div>
               </div> 
 
               <ion-item>
-                  <ion-label>
-                      <ion-icon item-left ios="ios-transgender" md="md-transgender"></ion-icon>
-                  </ion-label>
-                  <ion-select interface="popover" placeholder="religion" ([ngModel])="religion" formControlName="religion">
-                      <ion-option value="Hindu">Hindu</ion-option>
-                      <ion-option value="Muslim">Muslim</ion-option>
-                      <ion-option value="Christian">Christian</ion-option>
-                      <ion-option value="Buddhist">Buddhist</ion-option>
-                      <ion-option value="Jain">Jain</ion-option>
-                      <ion-option value="Sikh">Sikh</ion-option>
-                  </ion-select>
+                <ion-label>
+                    <ion-icon item-left ios="ios-transgender" md="md-transgender"></ion-icon>
+                </ion-label>
+                <ion-select interface="popover" placeholder="Annual Income" ([ngModel])="annual_income" formControlName="annual_income">
+                    <ion-option value="lessThanEightLac">Less than 8 lac</ion-option>
+                    <ion-option value="8-10lac">8 to 10 lac</ion-option>
+                    <ion-option value="10-12lac">10 to 12 lac</ion-option>
+                    <ion-option value="moreThan12Lac">12 and above</ion-option>
+                </ion-select>
               </ion-item>
-              <div *ngFor="let validation of validation_messages.religion" >
-                <div *ngIf="signUpForm.get('religion').hasError(validation.type) && signUpForm.get('religion').touched">
+              <div *ngFor="let validation of validation_messages.annual_income" >
+                <div *ngIf="signUpForm.get('annual_income').hasError(validation.type) && signUpForm.get('annual_income').touched">
                   <div class="error-message">{{validation.message}}</div>
                 </div>
               </div> 
+
+              <ion-item>
+                <ion-label>
+                  <ion-icon item-left ios="ios-transgender" md="md-transgender"></ion-icon>
+                </ion-label>
+                <ion-input type="text" placeholder="Add Hobby"
+                value="{{listHobby}}" multiple="true" readonly
+                formControlName="hobbies"></ion-input>
+                  <button item-end clear ion-button (click)="addHobby()"><ion-icon name="add"></ion-icon></button> 
+              </ion-item>
+              <div *ngFor="let validation of validation_messages.hobbies" >
+                <div *ngIf="signUpForm.get('hobbies').hasError(validation.type) && signUpForm.get('hobbies').touched">
+                  <div class="error-message">{{validation.message}}</div>
+                </div>
+              </div>
+
               
-              <ion-item>
-                  <ion-label>
-                      <ion-icon item-left ios="ios-transgender" md="md-transgender"></ion-icon>
-                  </ion-label>
-                  <ion-input type="text" placeholder="caste" ([ngModel])="caste" formControlName="caste"></ion-input>
-              </ion-item>
-              <div *ngFor="let validation of validation_messages.caste" >
-                <div *ngIf="signUpForm.get('caste').hasError(validation.type) && signUpForm.get('caste').touched">
-                  <div class="error-message">{{validation.message}}</div>
-                </div>
-              </div> 
-
             </ion-list>
 
             <ion-row>
@@ -98,7 +125,7 @@
                 <button ion-button start round center class="login-btn" (click)="goBack()">Prev</button>
               </ion-col>
               <ion-col>
-                <button ion-button round center class="login-btn" (click)="signUp(signUpForm.value)">Next</button>
+                <button ion-button round center class="login-btn" (click)="signUp(signUpForm.value)">Update</button>
               </ion-col>
             </ion-row>
         </form>
