--- a/src/pages/edit-profile/edit-matrimony-profile/edit-matrimony-step3/edit-matrimony-step3.html
+++ b/src/pages/edit-profile/edit-matrimony-profile/edit-matrimony-step3/edit-matrimony-step3.html
@@ -70,7 +70,7 @@
                 <button ion-button start round center class="login-btn" (click)="goBack()">Prev</button>
               </ion-col>
               <ion-col>
-                <button ion-button round center class="login-btn" (click)="submitDetails(marriageForm.value)">Next</button>
+                <button ion-button round center class="login-btn" (click)="submitDetails(marriageForm.value)">Update</button>
               </ion-col>
             </ion-row>
       </form>
