--- a/src/pages/edit-profile/edit-business-profile/edit-business-step3/edit-business-step3.html
+++ b/src/pages/edit-profile/edit-business-profile/edit-business-step3/edit-business-step3.html
@@ -58,7 +58,7 @@
                 <button ion-button start round center class="login-btn" (click)="goBack()">Prev</button>
               </ion-col>
               <ion-col>
-                <button ion-button round center class="login-btn" (click)="submitDetails(businessForm.value)">Next</button>
+                <button ion-button round center class="login-btn" (click)="submitDetails(businessForm.value)">Update</button>
               </ion-col>
             </ion-row>
         </form>
